--- a/static.hzshuangmei.com/css/m/sypjgjm/css/style.css
+++ b/static.hzshuangmei.com/css/m/sypjgjm/css/style.css
@@ -392,8 +392,10 @@ div.part2 .main .wrap .imgwrap img {
 }
 .part4 .main .contain .contact .prise, .part4 .main .contain .contact .appointement {
     width: 2.75rem;
-    height: 0.9rem;
     margin: 0 auto;
+}
+.part4 .main .contain .contact .appointement{
+    padding-top: 1px;
 }
 .part4 .main .contain .contact .prise span, .part4 .main .contain .contact .appointement span {
     text-align: center;
@@ -601,8 +603,12 @@ div.part2 .main .wrap .imgwrap img {
 }
 .part6 .contact .prise, .part6 .contact .appointement {
     width: 3.15rem;
-    height: 0.9rem;
     float: left;
+}
+.part6 .contact::after{
+    display: block;
+    content: " ";
+    clear:both;
 }
 .part6 .contact .prise span, .part6 .contact .appointement span {
     height: 0.9rem;
@@ -627,6 +633,7 @@ div.part2 .main .wrap .imgwrap img {
     background: #fd3358;
     margin-left: 11.3rem;
     margin-top: -0.9rem;
+    padding-top: 1px;
 }
 .part6 .contact .appointement span {
     display: block;
