--- a/static.hzshuangmei.com/css/m/hzwhfx/css/style.css
+++ b/static.hzshuangmei.com/css/m/hzwhfx/css/style.css
@@ -77,7 +77,8 @@ img {
     border-radius: 0.25rem;
 }
 
-.button p {
+.button span {
+    display: block;
     color: #fff;
     font-size: 0.5rem;
     text-align: center;
