--- a/static.hzshuangmei.com/css/m/sypjgjm/css/style.css
+++ b/static.hzshuangmei.com/css/m/sypjgjm/css/style.css
@@ -1,19 +1,6 @@
 ﻿@charset "UTF-8";
 body {
-    /*width: 100%;
-     */
-    /*margin: 0;
-     */
-    /*padding: 0;
-     */
-    /*padding-top:1rem;
-     */
-    /*padding-left: 0.05rem;
-     */
-    /*padding-right: 0.05rem;
-     */
-    /*margin-bottom:2rem;
-     */
+overflow-x: hidden;
 }
 * {
     font-family: "微软雅黑";
