--- a/static.hzshuangmei.com/css/pc/hzyswx/css.css
+++ b/static.hzshuangmei.com/css/pc/hzyswx/css.css
@@ -374,7 +374,7 @@ body {
 
     height: 872px;
 
-    background: url(//img.hzshuangmei.com/pc/hzyswm/images/main3-bg.jpg) top center no-repeat;
+    background: url(//img.hzshuangmei.com/pc/hzyswx/images/main3-bg.jpg) top center no-repeat;
 
     margin-top: 50px;
 
@@ -388,7 +388,7 @@ body {
 
 .zixun {
 
-    background-image: url(//img.hzshuangmei.com/pc/hzyswm/images/spritesheet.png);
+    background-image: url(//img.hzshuangmei.com/pc/hzyswx/images/spritesheet.png);
 
     text-align: center
 
@@ -734,7 +734,7 @@ body {
 
     height: 174px;
 
-    background: url(//img.hzshuangmei.com/pc/hzyswm/images/bk.png) no-repeat;
+    background: url(//img.hzshuangmei.com/pc/hzyswx/images/bk.png) no-repeat;
 
     float: left;
 
@@ -1132,7 +1132,7 @@ body {
 
     height: 56px;
 
-    background-image: url(//img.hzshuangmei.com/pc/hzyswm/images/spritesheet.png);
+    background-image: url(//img.hzshuangmei.com/pc/hzyswx/images/spritesheet.png);
 
     background-position: 0 -104px;
 
@@ -1184,7 +1184,7 @@ body {
 
     height: 822px;
 
-    background: url(//img.hzshuangmei.com/pc/hzyswm/images/main7-bg.jpg) no-repeat;
+    background: url(//img.hzshuangmei.com/pc/hzyswx/images/main7-bg.jpg) no-repeat;
 
     position: relative
 
@@ -1494,7 +1494,7 @@ body {
 
     height: 1514px;
 
-    background: url(//img.hzshuangmei.com/pc/hzyswm/images/bg-bottom.png) bottom center no-repeat
+    background: url(//img.hzshuangmei.com/pc/hzyswx/images/bg-bottom.png) bottom center no-repeat
 
 }
 
